fix: overflow scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html {
 
 body {
   background-color: white;
+  overflow-x: hidden;
 }
 
 a {
